# Ampersand

./: .amp  .ampersand  .appveyor.yml  .clineignore  .codeclimate.yml  .dockerignore  .env.example  .ghci  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .hsproject  .project  .project-prototype  .travis-setup.sh  .travis.yml  ATLAS-Input-Purpose-test.json  ATLAS_file.json  Ampersand.archimate  Ampersand.archimate.inconsistent  Ampersand.epp  CLAUDE.md  CheckDanglingPurposes_generated_pop.json  ComparisonTest1.hs  ComparisonTest1_dump.sql  Conjuncts.docadl  Dockerfile  Dockerfile.haskell  Dockerfile.utils  FormalAmpersand_generated_pop.json  HANDOFF_oracle_sql_dialect.md  LICENSE  Makefile  README.md  README.txt  ReleaseNotes.md  ReleaseNotes.md.orig  Setup-prototype.hs  Setup.hs  (+41 more)
.devcontainer/: Dockerfile  DockerfileGHCUP  DockerfileUpstream  DockerfileUpstream2  README.md  devcontainer.json
.github/: ISSUE_TEMPLATE.md
ArchiExtension/archiAnalyze/: CA repository.xml  archiAnalyze.cabal
ArchiExtension/archiAnalyze/src/: archiAnalyze.hs
Architecture and Design/: ADL systeemarchitectuur.vsd  readme.txt
ArchitectureAndDesign/: Parser ABI voorbereiding 2014 09 17.docx  Parser ABI voorbereiding.doc
GraphDataType/: README.md  example.txt
SO_UU_scanner/: Basics.hs  CtxError.hs  FilePos.hs  Lexer.hs  LexerBinaryTrees.hs  LexerMessage.hs  LexerMonad.hs  LexerTexts.hs  LexerToken.hs  Pair.hs  Parsec_Scanner_SO.hs  Parser.hs  ParsingLib.hs  UU_BinaryTrees.hs  UU_Scanner.hs
Test bestanden/: Aanvraag.adl  Deliver.adl  DeliverDates.adl  DeliverDates_oldWay.adl  Delivery6.adl  Meterkast.adl  OUNL.adl  Outlook.adl  SelectExprTest.adl  VIRO.adl  sick.adl  test.adl
app/: AmpPreProc.hs  Main.hs  RegressionTest.hs  Test.hs
docker/: Dockerfile  build.sh
docs/: Ampersand.archimate  BuildPrototype.drawio  CompilationProcess.md  Copy of Propositiescan.xlsx  Examples.md  README.md  SUMMARY.md  Wikipedia.md  Wikipedia.mdtxt  ampersand-synonym-mechanism.md  book.json  configuring-your-application.md  disambiguation-algorithm-analysis.md  disambiguation-bug-singleton-concepts.md  empty.md  examples.md  exercises.md  future-plans.md  guides.md  hello-world-ampersand.md  helloWorld.md  intro.md  onboarding.md  reactive-programming.md  regression-testing.md  research.md  reusing-available-modules.md  scenario.xlsx  sidebar.js  test-action.md  the-command-line-tool.md  the-excel-importer.md  theory-and-background.md  trial.py  troubleshooting.md  tutorial-rap4.md  type-system-implementation-notes.md  video-tutorials.md  videos.md
dontTouch/: README.md
frontend/: Architectuur Ampersand FW.pptx  dbsettings.php  index.php  index2.php  localSettings.php
images/: CDPatternActivabeheer.gv  CDPatternArtikelbeheer.gv  CDPatternBetalingenbeheer.gv  CDPatternContractbeheer.gv  CDPatternCrediteurenbeheer.gv  CDPatternDebiteurenbeheer.gv  CDPatternFormerenEnBezetten.gv  CDPatternGrootboekbeheer.gv  CDPatternInkoopEnVerkoop.gv  CDPatternInplannen.gv  CDPatternInzetRegistratie.gv  CDPatternInzetten.gv  CDPatternLevensfaseUren.gv  CDPatternOrderbeheer.gv  CDPatternPersoneelsmanagement.gv  CDPatternTreasurybeheer.gv  CDPatternVerlonen.gv  CDPatternWervingEnSelectie.gv  Classification.gv  LogicalDataModel-Activabeheer.gv  LogicalDataModel-Arbeidsrelatie.gv  LogicalDataModel-Artikelbeheer.gv  LogicalDataModel-Betalingenbeheer.gv  LogicalDataModel-Contractbeheer.gv  LogicalDataModel-Crediteurenbeheer.gv  LogicalDataModel-Debiteurenbeheer.gv  LogicalDataModel-FormerenEnBezetten.gv  LogicalDataModel-Grootboekbeheer.gv  LogicalDataModel-InkoopEnVerkoop.gv  LogicalDataModel-Inplannen.gv  LogicalDataModel-InzetRegistratie.gv  LogicalDataModel-Inzetten.gv  LogicalDataModel-Jaarwerkplan.gv  LogicalDataModel-LevensfaseUren.gv  LogicalDataModel-Orderbeheer.gv  LogicalDataModel-Personeelsmanagement.gv  LogicalDataModel-Treasurybeheer.gv  LogicalDataModel-Verlof.gv  LogicalDataModel-Verlonen.gv  LogicalDataModel-WervingEnSelectie.gv  (+3 more)
issues/: 20100803_showADL_expression_mphats.issue  20100826_adlexe_Fatal (module RelBinGenBasics 606).issue  20100826_adlsyntax_relations.issue  20100826_fspec_CONCEPT.issue  20100826_fspec_CONCEPT_notincluded.issue  20100826_fspec_EXPLAIN_SIGNALS.issue  20100826_fspec_PATTERN_notincluded.issue  20100912_fspec_FATAL_ERROR.issue  20100922_adl_FATAL_ERROR.issue  _read.this.convention
large_php_plugins/: PHP_PLUGINS_UTILITIES_README.txt
memorybank/: .clinerules  TESTING_INSTRUCTIONS.md  TOTALITY_SURJECTIVITY_FIX_GUIDE.md  activeContext.md  ampersand-build-workflow.md  ampersand-compiler-pipeline.md  ampersand-concept-type-mapping.md  ampersand-crud-rules.md  ampersand-database-inspection-guide.md  ampersand-datamodel-generation-recipe.md  ampersand-design-methodology.md  ampersand-frontend-templates.md  ampersand-infinite-loop-analysis.md  ampersand-interface-building-tutorial.md  ampersand-language-notes.md  ampersand-operators-reference.md  ampersand-producttype-pattern.md  ampersand-prototype-administration.md  ampersand-prototype-framework-switching.md  ampersand-systematic-debugging-methodology.md  ampersand-term-analysis-methodology.md  ampersand-testing-procedure.md  ampersand-type-checker-test-guidelines.md  ampersand-type-system-residuals.md  ampersand-union-intersection-type-compatibility.md  ampersand-validate-database-inspection.md  ampersandConceptMapping.md  ampersandExcelImportMapping.md  ampersandMultipleDeclarations.md  ampersandRelationComposition.md  ampersandSyntax.md  buildDeployProcess.md  code-modification-protocol.md  database-schema-compatibility-warnings.md  deployment-framework-updates.md  navmenuitem-transformer-issue.md  productcontext.md  projectbrief.md  propbutton-documentation-plan.md  systemPatterns.md  (+4 more)
miscellaneous/: Ampersand.ai  Ampersand.jgcscs  Ampersand.jgfns  AmpersandLogs.jgcscs  readme.txt  update_highlighterfiles(RJ).bat  which prototype version.bat
outputTemplates/: default.html  default.latex  default.rtf  defaultStyle.docx
preProcApp/: Main.hs
prototype/: build.sh
scripts/: check-docs-links.js  check-docs-sidebar.js
(+3079 files in other folders)
