name:          ampersand-prototype
version:       2.2.1
author:        Stef Joosten
maintainer:    stef.joosten@ou.nl
synopsis:      Toolsuite for automated design of business processes.
description:   You can define your business processes by means of rules, written in Relation Algebra.
               Ampersand compiles this into functional specifications, which define an information system to support that business process.
               Behold: a genuine real world application of Relation Algebra, which is being used in industry.
homepage:      ampersand.sourceforge.net
category:      Database Design
stability:     alpha
Cabal-Version: >= 1.14
build-type:    Custom
license:       OtherLicense
copyright:     Stef Joosten


Executable prototype
  Main-Is:         Main.hs
  Hs-Source-Dirs:  src
  build-depends:
                    ghc >= 7.4,
                    ampersand  == 2.2.1,
                    directory >= 1.2.0.1,
                    process >= 1.1.0.1 && < 1.2,
                    filepath >= 1.3.0.0 && < 1.4,
                    csv >= 0.1.2 && < 0.2,
                    split >= 0.1 && < 0.2,
                    old-time   >= 1.1 && < 1.2,
                    HDBC-odbc  >= 2.3.1.0 && < 2.4 ,
                    HDBC       >= 2.3.1.1 && < 2.4 ,
                    bytestring >= 0.10,
                    base >= 4.5.0.0,
                    time >= 1.4.0.2,
                    graphviz >=2999.16.0.0
  default-language: Haskell2010
  ghc-options:      -rtsopts


  -- Unfortunately, unix and MissingH are not available on windows
  if !os(windows)
    build-depends: 
      unix >= 2.5 && <2.6,
      MissingH >= 1.1 && < 1.2

  other-modules: 
                 DatabaseDesign.Ampersand_Prototype.Apps,
                 DatabaseDesign.Ampersand_Prototype.Apps.RAP,
                 DatabaseDesign.Ampersand_Prototype.Apps.RAPImport,
                 DatabaseDesign.Ampersand_Prototype.Apps.RAPIdentifiers,
                 DatabaseDesign.Ampersand_Prototype.CoreImporter,
                 DatabaseDesign.Ampersand_Prototype.GenBericht,
                 DatabaseDesign.Ampersand_Prototype.Generate,
                 DatabaseDesign.Ampersand_Prototype.Installer,
                 DatabaseDesign.Ampersand_Prototype.ObjBinGen,
                 DatabaseDesign.Ampersand_Prototype.RelBinGenBasics,
                 DatabaseDesign.Ampersand_Prototype.RelBinGenSQL,
                 DatabaseDesign.Ampersand_Prototype.Version,
                 DatabaseDesign.Ampersand_Prototype.ValidateSQL
