name:          ampersand-prototype
version:       3.0.3
author:        Stef Joosten
maintainer:    stef.joosten@ou.nl
synopsis:      Toolsuite for automated design of business processes.
description:   You can define your business processes by means of rules, written in Relation Algebra.
               Ampersand compiles this into functional specifications, which define an information system to support that business process.
               Behold: a genuine real world application of Relation Algebra, which is being used in industry.
homepage:      ampersand.sourceforge.net
category:      Database Design
stability:     alpha
cabal-version: >= 1.10
tested-with:   GHC == 7.8.3
build-type:    Custom
license:       OtherLicense
copyright:     Stef Joosten


Executable prototype
  Main-Is:          Main.hs
  Hs-Source-Dirs:   src
  build-depends:    ampersand  == 3.0.3,
                    graphviz == 2999.17.*,
                    base == 4.7.*,
                    bytestring == 0.10.*,
                    filepath == 1.3.*,
                    directory == 1.2.*,
                    time == 1.4.*,
                    process == 1.2.*,
                    split == 0.2.*,
                    csv == 0.1.*,
                    old-time == 1.1.*,
                    HDBC-odbc == 2.3.*,
                    HDBC == 2.4.*

  default-language: Haskell2010
  ghc-options:      -rtsopts +RTS -K4000000000 -RTS 
    --  HJO 20140320: Sentinel does not use the ghc-options above. Why is that???

  -- Unfortunately, unix and MissingH are not available on windows
  if !os(windows)
    build-depends: 
      unix == 2.7.*,
      MissingH == 1.2.*,
      old-locale == 1.0.*

  other-modules: 
                 Database.Design.Ampersand_Prototype.Apps,
                 Database.Design.Ampersand_Prototype.Apps.RAP,
                 Database.Design.Ampersand_Prototype.Apps.RAPImport,
                 Database.Design.Ampersand_Prototype.Apps.RAPIdentifiers,
                 Database.Design.Ampersand_Prototype.CoreImporter,
                 Database.Design.Ampersand_Prototype.GenBericht,
                 Database.Design.Ampersand_Prototype.Generate,
                 Database.Design.Ampersand_Prototype.Installer,
                 Database.Design.Ampersand_Prototype.ObjBinGen,
                 Database.Design.Ampersand_Prototype.RelBinGenBasics,
                 Database.Design.Ampersand_Prototype.RelBinGenSQL,
                 Database.Design.Ampersand_Prototype.Version,
                 Database.Design.Ampersand_Prototype.ValidateSQL
