name:           ampersand
version:        3.6.1
author:         Stef Joosten
maintainer:     stef.joosten@ou.nl
synopsis:       Toolsuite for automated design of business processes.
description:    You can define your business processes by means of rules, written in Relation Algebra.
homepage:       http://wiki.tarski.nl
category:       Database Design
stability:      alpha
cabal-version:  >= 1.22
tested-with:    GHC == 7.10.3
build-type:     Custom
license:        GPL
license-file:   LICENSE
copyright:      Stef Joosten
bug-reports:    https://github.com/AmpersandTarski/ampersand/issues
-- Recursive patterns such as static/* are not allowed in data-files. Hence we cannot use them for static files, as
-- we would need to specify a pattern for each extension in each subdirectory.
data-files:
                LICENSE

source-repository head
  type:      git
  location:  https://github.com/AmpersandTarski/ampersand.git

executable ampersand
  hs-source-dirs:    app
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -rtsopts -Wall
  build-depends:     base == 4.8.*,
                     ampersand
library
  hs-source-dirs:    src
  ghc-options:       -rtsopts -Wall
  exposed-modules:   Ampersand
  default-language:  Haskell2010
  build-depends:     aeson == 0.11.*,
                     aeson-pretty == 0.7.*,
                     base == 4.8.*,
                     bytestring == 0.10.*,
                     conduit == 1.2.7.*,
                     conduit-extra == 1.1.13.*,
                     conduit-combinators == 1.0.4.*,
                     containers == 0.5.*,
                     csv == 0.1.*,
                     data-default >=0.5 && <0.6,
                     directory == 1.2.*,
                     filepath == 1.4.*,
                     graphviz == 2999.18.*,
                     hashable == 1.2.*,
                     HStringTemplate == 0.8.*,
                     lens == 4.13.*,
                     MissingH == 1.3.*,
                     mtl == 2.2.*,
                     pandoc == 1.17.*,
                     pandoc-types == 1.16.*,
                     parsec == 3.1.*,
                     process == 1.2.*,
                     simple-sql-parser == 0.4.1,
                     split == 0.2.*,
                     SpreadsheetML ==0.1.*,
                     text == 1.2.*,
                     time == 1.5.*,
                     utf8-string == 1.0.*,
                     wl-pprint == 1.2.*,
                     yaml == 0.8.18.*,
                     yaml-config == 0.4.*,
                     xlsx == 0.2.4.*,
                     zlib == 0.6.*

  other-modules:
                     Ampersand.ADL1,
                     Ampersand.ADL1.Disambiguate,
                     Ampersand.ADL1.ECArule,
                     Ampersand.ADL1.Expression,
                     Ampersand.ADL1.Lattices,
                     Ampersand.ADL1.P2A_Converters,
                     Ampersand.ADL1.PrettyPrinters,
                     Ampersand.ADL1.Rule,
                     Ampersand.Basics,
                     Ampersand.Basics.Auxiliaries,
                     Ampersand.Basics.BuildInfo_Generated,
                     Ampersand.Basics.Collection,
                     Ampersand.Basics.String,
                     Ampersand.Basics.UTF8,
                     Ampersand.Basics.Unique,
                     Ampersand.Basics.Version,
                     Ampersand.Classes,
                     Ampersand.Classes.ConceptStructure,
                     Ampersand.Classes.Relational,
                     Ampersand.Classes.ViewPoint,
                     Ampersand.Components,
                     Ampersand.Core.AbstractSyntaxTree,
                     Ampersand.Core.ParseTree,
                     Ampersand.FSpec,
                     Ampersand.FSpec.Crud,
                     Ampersand.FSpec.FPA,
                     Ampersand.FSpec.FSpec,
                     Ampersand.FSpec.FSpecAux,
                     Ampersand.FSpec.GenerateUML,
                     Ampersand.FSpec.Motivations,
                     Ampersand.FSpec.SQL,
                     Ampersand.FSpec.ShowADL,
                     Ampersand.FSpec.ShowECA,
                     Ampersand.FSpec.ShowHS,
                     Ampersand.FSpec.ShowMeatGrinder,
                     Ampersand.FSpec.Switchboard,
                     Ampersand.FSpec.ToFSpec.ADL2FSpec,
                     Ampersand.FSpec.ToFSpec.ADL2Plug,
                     Ampersand.FSpec.ToFSpec.Calc,
                     Ampersand.FSpec.ToFSpec.CreateFspec,
                     Ampersand.FSpec.ToFSpec.NormalForms,
                     Ampersand.FSpec.ToFSpec.Populated,
                     Ampersand.Graphic.ClassDiag2Dot,
                     Ampersand.Graphic.ClassDiagram,
                     Ampersand.Graphic.Fspec2ClassDiagrams,
                     Ampersand.Graphic.Graphics,
                     Ampersand.Input,
                     Ampersand.Input.ADL1.CtxError,
                     Ampersand.Input.ADL1.FilePos,
                     Ampersand.Input.ADL1.Lexer,
                     Ampersand.Input.ADL1.LexerMessage,
                     Ampersand.Input.ADL1.LexerMonad,
                     Ampersand.Input.ADL1.LexerTexts,
                     Ampersand.Input.ADL1.LexerToken,
                     Ampersand.Input.ADL1.Parser,
                     Ampersand.Input.ADL1.ParsingLib,
                     Ampersand.Input.Parsing,
                     Ampersand.Input.Xslx.XLSX,
                     Ampersand.Misc,
                     Ampersand.Misc.Explain,
                     Ampersand.Misc.Languages,
                     Ampersand.Misc.Options,
                     Ampersand.Output,
                     Ampersand.Output.FSpec2Excel,
                     Ampersand.Output.FSpec2Pandoc,
                     Ampersand.Output.FSpec2SQL,
                     Ampersand.Output.PandocAux,
                     Ampersand.Output.Population2Xlsx,
                     Ampersand.Output.PredLogic,
                     Ampersand.Output.Statistics,
                     Ampersand.Output.ToJSON.JSONutils,
                     Ampersand.Output.ToJSON.ToJson,
                     Ampersand.Output.ToPandoc.ChapterConceptualAnalysis,
                     Ampersand.Output.ToPandoc.ChapterDataAnalysis,
                     Ampersand.Output.ToPandoc.ChapterDiagnosis,
                     Ampersand.Output.ToPandoc.ChapterECArules,
                     Ampersand.Output.ToPandoc.ChapterFunctionPointAnalysis,
                     Ampersand.Output.ToPandoc.ChapterGlossary,
                     Ampersand.Output.ToPandoc.ChapterInterfaces,
                     Ampersand.Output.ToPandoc.ChapterIntroduction,
                     Ampersand.Output.ToPandoc.ChapterNatLangReqs,
                     Ampersand.Output.ToPandoc.ChapterProcessAnalysis,
                     Ampersand.Output.ToPandoc.ChapterSoftwareMetrics,
                     Ampersand.Output.ToPandoc.SharedAmongChapters,
                     Ampersand.Prototype.GenBericht,
                     Ampersand.Prototype.GenFrontend,
                     Ampersand.Prototype.Generate,
                     Ampersand.Prototype.WriteStaticFiles,
                     Ampersand.Prototype.PHP,
                     Ampersand.Prototype.ProtoUtil,
                     Ampersand.Prototype.ValidateSQL,
                     Ampersand.Prototype.StaticFiles_Generated,
                     Ampersand.Output.ToJSON.MySQLInstaller,
                     Ampersand.Output.ToJSON.Settings,
                     Ampersand.Output.ToJSON.Relations,
                     Ampersand.Output.ToJSON.Rules,
                     Ampersand.Output.ToJSON.Concepts,
                     Ampersand.Output.ToJSON.Conjuncts,
                     Ampersand.Output.ToJSON.Interfaces,
                     Ampersand.Output.ToJSON.Roles,
                     Ampersand.Output.ToJSON.Views

Test-Suite regression-test
  type:              exitcode-stdio-1.0
  main-is:           RegressionTest.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -rtsopts -Wall
  build-depends:     base == 4.8.*,
                     conduit == 1.2.7.*,
                     conduit-extra == 1.1.13.*,
                     conduit-combinators == 1.0.4.*,
                     yaml == 0.8.18.*,
                     yaml-config == 0.4.*,
                     process == 1.2.*,
                     transformers == 0.4.*,
                     directory == 1.2.*,
                     filepath == 1.4.*
  other-modules:
                     Ampersand.ADL1,
                     Ampersand.ADL1.Disambiguate,
                     Ampersand.ADL1.ECArule,
                     Ampersand.ADL1.Expression,
                     Ampersand.ADL1.Lattices,
                     Ampersand.ADL1.P2A_Converters,
                     Ampersand.ADL1.PrettyPrinters,
                     Ampersand.ADL1.Rule,
                     Ampersand.Basics,
                     Ampersand.Basics.Auxiliaries,
                     Ampersand.Basics.BuildInfo_Generated,
                     Ampersand.Basics.Collection,
                     Ampersand.Basics.String,
                     Ampersand.Basics.UTF8,
                     Ampersand.Basics.Unique,
                     Ampersand.Basics.Version,
                     Ampersand.Classes,
                     Ampersand.Classes.ConceptStructure,
                     Ampersand.Classes.Relational,
                     Ampersand.Classes.ViewPoint,
                     Ampersand.Core.AbstractSyntaxTree,
                     Ampersand.Core.ParseTree,
                     Ampersand.FSpec.Crud,
                     Ampersand.FSpec.FSpec,
                     Ampersand.FSpec.FSpecAux,
                     Ampersand.FSpec.Motivations,
                     Ampersand.FSpec.SQL,
                     Ampersand.FSpec.ShowADL,
                     Ampersand.FSpec.ShowECA,
                     Ampersand.FSpec.ShowHS,
                     Ampersand.FSpec.ShowMeatGrinder,
                     Ampersand.FSpec.ToFSpec.ADL2FSpec,
                     Ampersand.FSpec.ToFSpec.ADL2Plug,
                     Ampersand.FSpec.ToFSpec.Calc,
                     Ampersand.FSpec.ToFSpec.CreateFspec,
                     Ampersand.FSpec.ToFSpec.NormalForms,
                     Ampersand.FSpec.ToFSpec.Populated,
                     Ampersand.Input,
                     Ampersand.Input.ADL1.CtxError,
                     Ampersand.Input.ADL1.FilePos,
                     Ampersand.Input.ADL1.Lexer,
                     Ampersand.Input.ADL1.LexerMessage,
                     Ampersand.Input.ADL1.LexerMonad,
                     Ampersand.Input.ADL1.LexerTexts,
                     Ampersand.Input.ADL1.LexerToken,
                     Ampersand.Input.ADL1.Parser,
                     Ampersand.Input.ADL1.ParsingLib,
                     Ampersand.Input.Parsing,
                     Ampersand.Misc,
                     Ampersand.Misc.Explain,
                     Ampersand.Misc.Languages,
                     Ampersand.Prototype.StaticFiles_Generated

Test-Suite ampersand-test
  type:              exitcode-stdio-1.0
  main-is:           Test.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -fhpc -with-rtsopts=-M1536m -Wall
  build-depends:     base == 4.8.*,
                     bytestring == 0.10.*,
                     conduit == 1.2.7.*,
                     containers == 0.5.*,
                     data-default >=0.5 && <0.6,
                     directory == 1.2.*,
                     filepath == 1.4.*,
                     hashable == 1.2.*,
                     lens == 4.13.*,
                     MissingH == 1.3.*,
                     mtl == 2.2.*,
                     pandoc == 1.17.*,
                     pandoc-types == 1.16.*,
                     parsec == 3.1.*,
                     QuickCheck == 2.8.*,
                     simple-sql-parser == 0.4.1,
                     text == 1.2.*,
                     time == 1.5.*,
                     transformers == 0.4.*,
                     utf8-string == 1.0.*,
                     wl-pprint == 1.2.*,
                     xlsx == 0.2.4.*,
                     yaml == 0.8.18.*,
                     yaml-config == 0.4.*,
                     zlib == 0.6.*
  other-modules:
                     Ampersand.Misc.Options,
                     Ampersand.Test.Parser.ArbitraryPandoc,
                     Ampersand.Test.Parser.ArbitraryTree,
                     Ampersand.Test.Parser.ParserTest,
                     Ampersand.Test.Parser.QuickChecks,
                     Ampersand.Test.RunAmpersand,
                     Ampersand.Test.TestScripts,
                     Ampersand.Input.Xslx.XLSX,
                     Ampersand.Output.Population2Xlsx,
                     Ampersand.Graphic.ClassDiag2Dot,
                     Ampersand.Graphic.Fspec2ClassDiagrams,
                     Ampersand.Output.ToJSON.MySQLInstaller,
                     Ampersand.Output.ToJSON.Settings,
                     Ampersand.Output.ToJSON.Relations,
                     Ampersand.Output.ToJSON.Rules,
                     Ampersand.Output.ToJSON.Concepts,
                     Ampersand.Output.ToJSON.Conjuncts,
                     Ampersand.Output.ToJSON.Interfaces,
                     Ampersand.Output.ToJSON.Views,
                     Ampersand.Output.ToJSON.Roles,
                     Ampersand.ADL1,
                     Ampersand.ADL1.Disambiguate,
                     Ampersand.ADL1.ECArule,
                     Ampersand.ADL1.Expression,
                     Ampersand.ADL1.Lattices,
                     Ampersand.ADL1.P2A_Converters,
                     Ampersand.ADL1.PrettyPrinters,
                     Ampersand.ADL1.Rule,
                     Ampersand.Basics,
                     Ampersand.Basics.Auxiliaries,
                     Ampersand.Basics.BuildInfo_Generated,
                     Ampersand.Basics.Collection,
                     Ampersand.Basics.String,
                     Ampersand.Basics.UTF8,
                     Ampersand.Basics.Unique,
                     Ampersand.Basics.Version,
                     Ampersand.Classes,
                     Ampersand.Classes.ConceptStructure,
                     Ampersand.Classes.Relational,
                     Ampersand.Classes.ViewPoint,
                     Ampersand.Core.AbstractSyntaxTree,
                     Ampersand.Core.ParseTree,
                     Ampersand.FSpec.Crud,
                     Ampersand.FSpec.FSpec,
                     Ampersand.FSpec.FSpecAux,
                     Ampersand.FSpec.Motivations,
                     Ampersand.FSpec.SQL,
                     Ampersand.FSpec.ShowADL,
                     Ampersand.FSpec.ShowECA,
                     Ampersand.FSpec.ShowHS,
                     Ampersand.FSpec.ShowMeatGrinder,
                     Ampersand.FSpec.ToFSpec.ADL2FSpec,
                     Ampersand.FSpec.ToFSpec.ADL2Plug,
                     Ampersand.FSpec.ToFSpec.Calc,
                     Ampersand.FSpec.ToFSpec.CreateFspec,
                     Ampersand.FSpec.ToFSpec.NormalForms,
                     Ampersand.FSpec.ToFSpec.Populated,
                     Ampersand.Input,
                     Ampersand.Input.ADL1.CtxError,
                     Ampersand.Input.ADL1.FilePos,
                     Ampersand.Input.ADL1.Lexer,
                     Ampersand.Input.ADL1.LexerMessage,
                     Ampersand.Input.ADL1.LexerMonad,
                     Ampersand.Input.ADL1.LexerTexts,
                     Ampersand.Input.ADL1.LexerToken,
                     Ampersand.Input.ADL1.Parser,
                     Ampersand.Input.ADL1.ParsingLib,
                     Ampersand.Input.Parsing,
                     Ampersand.Misc,
                     Ampersand.Misc.Explain,
                     Ampersand.Misc.Languages,
                     Ampersand.Prototype.StaticFiles_Generated
