name:           ampersand
version:        3.8.6
author:         Stef Joosten
maintainer:     stef.joosten@ou.nl
synopsis:       Toolsuite for automated design of business processes.
description:    You can define your business processes by means of rules, written in Relation Algebra.
homepage:       http://wiki.tarski.nl
category:       Database Design
stability:      alpha
cabal-version:  >= 1.24
tested-with:    GHC == 8.0.1
build-type:     Custom
license:        GPL
license-file:   LICENSE
copyright:      Stef Joosten
bug-reports:    https://github.com/AmpersandTarski/ampersand/issues
-- Recursive patterns such as static/* are not allowed in data-files. Hence we cannot use them for static files, as
-- we would need to specify a pattern for each extension in each subdirectory.
data-files:
                LICENSE

custom-setup
  setup-depends:     base == 4.9.*,
                     bytestring == 0.10.*,
                     Cabal == 1.24.*,
                     directory == 1.3.*,
                     filepath == 1.4.*,
                     process == 1.4.*,
                     time == 1.6.*,
                     zlib == 0.6.*
source-repository head
  type:      git
  location:  https://github.com/AmpersandTarski/ampersand.git

library
  hs-source-dirs:    src
  ghc-options:       -Wall
  default-language:  Haskell2010
  build-depends:     aeson == 1.0.*,
                     aeson-pretty == 0.8.*,
                     base == 4.9.*,
                     bytestring == 0.10.*,
                     conduit == 1.2.*,
                     conduit-extra == 1.1.16.*,
                     conduit-combinators == 1.1.*,
                     containers == 0.5.*,
                     csv == 0.1.*,
                     data-default == 0.7.*,
                     directory == 1.3.*,
                     filepath == 1.4.*,
                     graphviz == 2999.18.*,
                     hashable == 1.2.*,
                     HStringTemplate == 0.8.*,
                     lens == 4.15.*,
                     MissingH == 1.4.*,
                     mtl == 2.2.*,
                     pandoc == 1.19.*,
                     pandoc-crossref == 0.2.5.*,
                     pandoc-types == 1.17.*,
                     parsec == 3.1.*,
                     process == 1.4.*,
                     QuickCheck == 2.9.*,
                     simple-sql-parser == 0.4.2,
                     split == 0.2.*,
                     SpreadsheetML ==0.1.*,
                     text == 1.2.*,
                     time == 1.6.*,
                     transformers == 0.5.*,
                     utf8-string == 1.0.*,
                     wl-pprint == 1.2.*,
                     yaml == 0.8.23.*,
                     yaml-config == 0.4.*,
                     xlsx == 0.4.3.*,
                     zlib == 0.6.*

  exposed-modules:   Ampersand,
                     Ampersand.ADL1,
                     Ampersand.ADL1.Disambiguate,
                     Ampersand.ADL1.Expression,
                     Ampersand.ADL1.Lattices,
                     Ampersand.ADL1.P2A_Converters,
                     Ampersand.ADL1.PrettyPrinters,
                     Ampersand.ADL1.Rule,
                     Ampersand.Basics,
                     Ampersand.Basics.Auxiliaries,
                     Ampersand.Basics.BuildInfo_Generated,
                     Ampersand.Basics.Collection,
                     Ampersand.Basics.Exit,
                     Ampersand.Basics.Languages,
                     Ampersand.Basics.PandocExtended,
                     Ampersand.Basics.String,
                     Ampersand.Basics.Unique,
                     Ampersand.Basics.UTF8,
                     Ampersand.Basics.Version,
                     Ampersand.Classes,
                     Ampersand.Classes.ConceptStructure,
                     Ampersand.Classes.Relational,
                     Ampersand.Classes.ViewPoint,
                     Ampersand.Components,
                     Ampersand.Core.A2P_Converters,
                     Ampersand.Core.AbstractSyntaxTree,
                     Ampersand.Core.ParseTree,
                     Ampersand.Core.ShowAStruct,
                     Ampersand.Core.ShowPStruct,
                     Ampersand.FSpec,
                     Ampersand.FSpec.Crud,
                     Ampersand.FSpec.FPA,
                     Ampersand.FSpec.FSpec,
                     Ampersand.FSpec.FSpecAux,
                     Ampersand.FSpec.GenerateUML,
                     Ampersand.FSpec.Motivations,
                     Ampersand.FSpec.ShowHS,
                     Ampersand.FSpec.ShowMeatGrinder,
                     Ampersand.FSpec.SQL,
                     Ampersand.FSpec.ToFSpec.ADL2FSpec,
                     Ampersand.FSpec.ToFSpec.ADL2Plug,
                     Ampersand.FSpec.ToFSpec.Calc,
                     Ampersand.FSpec.ToFSpec.CreateFspec,
                     Ampersand.FSpec.ToFSpec.NormalForms,
                     Ampersand.FSpec.ToFSpec.Populated,
                     Ampersand.Graphic.ClassDiag2Dot,
                     Ampersand.Graphic.ClassDiagram,
                     Ampersand.Graphic.Fspec2ClassDiagrams,
                     Ampersand.Graphic.Graphics,
                     Ampersand.Input,
                     Ampersand.Input.ADL1.CtxError,
                     Ampersand.Input.ADL1.FilePos,
                     Ampersand.Input.ADL1.Lexer,
                     Ampersand.Input.ADL1.LexerMessage,
                     Ampersand.Input.ADL1.LexerMonad,
                     Ampersand.Input.ADL1.LexerTexts,
                     Ampersand.Input.ADL1.LexerToken,
                     Ampersand.Input.ADL1.Parser,
                     Ampersand.Input.ADL1.ParsingLib,
                     Ampersand.Input.Parsing,
                     Ampersand.Input.Xslx.XLSX,
                     Ampersand.Misc,
                     Ampersand.Misc.Options,
                     Ampersand.Output,
                     Ampersand.Output.FSpec2Excel,
                     Ampersand.Output.FSpec2Pandoc,
                     Ampersand.Output.FSpec2SQL,
                     Ampersand.Output.PandocAux,
                     Ampersand.Output.Population2Xlsx,
                     Ampersand.Output.PredLogic,
                     Ampersand.Output.Statistics,
                     Ampersand.Output.ToJSON.Concepts,
                     Ampersand.Output.ToJSON.Conjuncts,
                     Ampersand.Output.ToJSON.Interfaces,
                     Ampersand.Output.ToJSON.JSONutils,
                     Ampersand.Output.ToJSON.MySQLInstaller,
                     Ampersand.Output.ToJSON.Relations,
                     Ampersand.Output.ToJSON.Roles,
                     Ampersand.Output.ToJSON.Rules,
                     Ampersand.Output.ToJSON.Settings,
                     Ampersand.Output.ToJSON.ToJson,
                     Ampersand.Output.ToJSON.Views,
                     Ampersand.Output.ToPandoc
                     Ampersand.Output.ToPandoc.ChapterConceptualAnalysis,
                     Ampersand.Output.ToPandoc.ChapterDataAnalysis,
                     Ampersand.Output.ToPandoc.ChapterDiagnosis,
                     Ampersand.Output.ToPandoc.ChapterFunctionPointAnalysis,
                     Ampersand.Output.ToPandoc.ChapterGlossary,
                     Ampersand.Output.ToPandoc.ChapterInterfaces,
                     Ampersand.Output.ToPandoc.ChapterIntroduction,
                     Ampersand.Output.ToPandoc.ChapterNatLangReqs,
                     Ampersand.Output.ToPandoc.ChapterProcessAnalysis,
                     Ampersand.Output.ToPandoc.ChapterSoftwareMetrics,
                     Ampersand.Output.ToPandoc.SharedAmongChapters,
                     Ampersand.Prototype.GenBericht,
                     Ampersand.Prototype.Generate,
                     Ampersand.Prototype.GenFrontend,
                     Ampersand.Prototype.PHP,
                     Ampersand.Prototype.ProtoUtil,
                     Ampersand.Prototype.StaticFiles_Generated,
                     Ampersand.Prototype.ValidateSQL,
                     Ampersand.Prototype.WriteStaticFiles,
                     Ampersand.Test
                     Ampersand.Test.Parser.ArbitraryTree,
                     Ampersand.Test.Parser.ParserTest,
                     Ampersand.Test.Parser.QuickChecks,
                     Ampersand.Test.Regression,
                     Ampersand.Test.RunAmpersand,
                     Ampersand.Test.TestScripts

executable ampersand
  hs-source-dirs:    app
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -rtsopts -Wall
  build-depends:     base == 4.9.*,
                     ampersand

Test-Suite regression-test
  type:              exitcode-stdio-1.0
  main-is:           RegressionTest.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  ghc-options:       -rtsopts -Wall
  build-depends:     ampersand,
                     base == 4.9.*,
                     conduit == 1.2.*,
                     conduit-combinators == 1.1.*,
                     directory == 1.3.*,
                     filepath == 1.4.*,
                     process == 1.4.*,
                     transformers == 0.5.*,
                     yaml == 0.8.23.*
                    
Test-Suite ampersand-test
  type:              exitcode-stdio-1.0
  main-is:           Test.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  ghc-options:       -rtsopts -Wall
  build-depends:     ampersand,
                     base == 4.9.*,
                     aeson == 1.0.*,
                     aeson-pretty == 0.8.*,
                     bytestring == 0.10.*,
                     conduit == 1.2.*,
                     conduit-combinators == 1.1.*,
                     containers == 0.5.*,
                     data-default == 0.7.*,
                     directory == 1.3.*,
                     filepath == 1.4.*,
                     graphviz == 2999.18.*,
                     hashable == 1.2.*,
                     lens == 4.15.*,
                     MissingH == 1.4.*,
                     mtl == 2.2.*,
                     pandoc == 1.19.*,
                     pandoc-types == 1.17.*,
                     parsec == 3.1.*,
                     process == 1.4.*,
                     QuickCheck == 2.9.*,
                     simple-sql-parser == 0.4.2,
                     SpreadsheetML ==0.1.*,
                     split == 0.2.*,
                     text == 1.2.*,
                     time == 1.6.*,
                     transformers == 0.5.*,
                     utf8-string == 1.0.*,
                     wl-pprint == 1.2.*,
                     xlsx == 0.4.3.*,
                     yaml == 0.8.23.*,
                     yaml-config == 0.4.*,
                     zlib == 0.6.*

